--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -5,6 +5,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFDF7"
-    tools:context=".RegisterActivity">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:context=".EditProfileActivity" />
