--- a/app/src/main/res/layout/activity_wait.xml
+++ b/app/src/main/res/layout/activity_wait.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="170dp"
-        android:fontFamily="sans-serif-smallcaps"
+        android:fontFamily="@font/abhaya_libre_semibold"
         android:text="@string/tunggu"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/gifImageView2"
