--- a/app/src/main/res/layout/activity_data_pasien.xml
+++ b/app/src/main/res/layout/activity_data_pasien.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content">
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textInputLayout"
+                android:id="@+id/textInput_login_email"
                 android:layout_width="272dp"
                 android:layout_height="55dp"
                 android:layout_marginTop="16dp"
@@ -54,8 +54,8 @@
                 android:layout_marginTop="30dp"
                 android:fontFamily="sans-serif"
                 android:text="@string/jenis_kelamin"
-                app:layout_constraintStart_toStartOf="@+id/textInputLayout"
-                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+                app:layout_constraintStart_toStartOf="@+id/textInput_login_email"
+                app:layout_constraintTop_toBottomOf="@+id/textInput_login_email" />
 
             <RadioGroup
                 android:id="@+id/dataPasien_radioGroup_jKelamin"
@@ -83,7 +83,7 @@
             </RadioGroup>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textInputLayout2"
+                android:id="@+id/textInput_login_password"
                 android:layout_width="272dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -102,13 +102,13 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textInputLayout3"
+                android:id="@+id/textInput_register_email"
                 android:layout_width="272dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">
+                app:layout_constraintTop_toBottomOf="@+id/textInput_login_password">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/dataPasien_textInput_noTelp"
@@ -121,13 +121,13 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textInputLayout4"
+                android:id="@+id/textInput_register_password"
                 android:layout_width="272dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">
+                app:layout_constraintTop_toBottomOf="@+id/textInput_register_email">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/dataPasien_textInput_alamat"
@@ -144,7 +144,7 @@
                 android:layout_marginTop="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">
+                app:layout_constraintTop_toBottomOf="@+id/textInput_register_password">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/dataPasien_textInput_noTelpKeluarga"
