--- a/app/src/main/res/layout/activity_wait.xml
+++ b/app/src/main/res/layout/activity_wait.xml
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="0.413" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textview_profile_nama"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="170dp"
