--- a/app/src/main/res/layout/activity_see_data.xml
+++ b/app/src/main/res/layout/activity_see_data.xml
@@ -7,25 +7,48 @@
     android:background="#FFFDF7"
     tools:context=".SeeDataActivity">
 
-    <ScrollView
-        android:layout_width="409dp"
-        android:layout_height="656dp"
+    <Button
+        android:id="@+id/seeData_button_export"
+        android:layout_width="wrap_content"
+        android:layout_height="55dp"
+        android:layout_marginBottom="24dp"
+        android:text="@string/export"
+        app:cornerRadius="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.867"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/ImageView15"
+        android:layout_width="414dp"
+        android:layout_height="153dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/for_see_data_removebg_preview" />
+
+    <ImageButton
+        android:id="@+id/seeData_imageView_back2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="24dp"
+        android:background="#00FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/arrow_back" />
+
+    <ScrollView
+        android:layout_width="415dp"
+        android:layout_height="512dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ImageView15">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/ImageView15"
-                android:layout_width="414dp"
-                android:layout_height="153dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/for_see_data_removebg_preview" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
