--- a/app/src/main/res/layout/activity_data_pasien.xml
+++ b/app/src/main/res/layout/activity_data_pasien.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content">
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textInputLayout"
+                android:id="@+id/dataPasien_textInput_namaPasien"
                 android:layout_width="272dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -38,7 +38,6 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/dataPasien_textInput_namaPasien"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="#00FFFFFF"
@@ -54,8 +53,8 @@
                 android:layout_marginTop="30dp"
                 android:fontFamily="sans-serif"
                 android:text="@string/jenis_kelamin"
-                app:layout_constraintStart_toStartOf="@+id/textInputLayout"
-                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+                app:layout_constraintStart_toStartOf="@+id/dataPasien_textInput_namaPasien"
+                app:layout_constraintTop_toBottomOf="@+id/dataPasien_textInput_namaPasien" />
 
             <RadioGroup
                 android:id="@+id/dataPasien_radioGroup_jKelamin"
