--- a/app/src/main/res/drawable/home_bg.xml
+++ b/app/src/main/res/drawable/home_bg.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#000000"/>
-    <corners android:bottomRightRadius="290dp"/>
     <gradient
         android:startColor="#F5FFFA"
-        android:endColor="#59FFEB"
+        android:centerColor="#59FFEB"
+        android:endColor="#18C1AD"
         android:angle="90" />
 </shape>
