--- a/app/src/main/res/layout/activity_add_data.xml
+++ b/app/src/main/res/layout/activity_add_data.xml
@@ -196,7 +196,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
                         android:fontFamily="@font/amaranth_bold"
-                        android:text="@string/PEMERIKSAAN"
+                        android:text="@string/PEMERIKSAAN_LABORATORIUM"
                         android:textColor="#000000"
                         android:textSize="17sp"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -204,21 +204,6 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/l"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="16dp"
-                        android:fontFamily="@font/amaranth_bold"
-                        android:text="@string/LABORATORIUM"
-                        android:textColor="#000000"
-                        android:textSize="17sp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="@+id/p"
-                        app:layout_constraintHorizontal_bias="0.538"
-                        app:layout_constraintStart_toStartOf="@+id/p"
-                        app:layout_constraintTop_toBottomOf="@+id/p"
-                        app:layout_constraintVertical_bias="0.0" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
@@ -333,26 +318,13 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
                         android:fontFamily="@font/amaranth_bold"
-                        android:text="@string/MANIFESTASI"
+                        android:text="@string/MANIFESTASI_KLINIS"
                         android:textColor="#000000"
                         android:textSize="17sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/k"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="16dp"
-                        android:fontFamily="@font/amaranth_bold"
-                        android:text="@string/KLINIS"
-                        android:textColor="#000000"
-                        android:textSize="17sp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="@+id/m"
-                        app:layout_constraintStart_toStartOf="@+id/m"
-                        app:layout_constraintTop_toBottomOf="@+id/m" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
