--- a/app/src/main/res/layout/activity_card_name.xml
+++ b/app/src/main/res/layout/activity_card_name.xml
@@ -7,10 +7,11 @@
     tools:context=".cardNameActivity">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/card_cardView"
         android:layout_width="320dp"
         android:layout_height="70dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
         android:backgroundTint="#91E4D2"
         app:cardCornerRadius="12dp"
         app:cardElevation="10dp"
@@ -25,7 +26,7 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textView20"
+                android:id="@+id/card_textView_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/abhaya_libre_semibold"
