--- a/app/src/main/res/layout/fragment_files.xml
+++ b/app/src/main/res/layout/fragment_files.xml
@@ -42,6 +42,7 @@
         app:srcCompat="@drawable/ic_baseline_search_24" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/files_recycleView"
         android:layout_width="411dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
